[metadata]
name = infra_healthcheck
version = 1

[files]
packages = infra_healthcheck

[entry_points]
xtesting.testcase =
    onap_k8s = kubernetes_status.status:Status
    onap_helm = infra_healthcheck.k8stest:OnapHelmTest
    nodeport_ingress = infra_healthcheck.k8stest:OnapSecurityNodePortsIngress
