[metadata]
name = infra_healthcheck
version = 8.0.0

[files]
packages = infra_healthcheck

[entry_points]
xtesting.testcase =
    onap_k8s = kubernetes_status.status:Status
    onap_helm = helm_onap_status.status:Status
    onap_chart = chart_status.status:Status
    nodeport_ingress = infra_healthcheck.k8stest:OnapSecurityNodePortsIngress
    nodeport_check_certs = infra_healthcheck.k8stest:OnapSecurityNodePortsCerts
    internal_check_certs = infra_healthcheck.k8stest:OnapSecurityInternalPortsCerts
