[metadata]
name = onap_security
version = 1

[files]
packages = onap_security

[entry_points]
xtesting.testcase =
    root_pods = onap_security.security_tests:OnapSecurityDockerRootTest
    unlimitted_pods = onap_security.security_tests:OnapSecurityUnlimittedPodTest
    cis_kubernetes = onap_security.security_tests:OnapSecurityCisKubernetes
    http_public_endpoints = onap_security.security_tests:OnapSecurityHttpPorts
    nonssl_endpoints = onap_security.security_tests:OnapSecurityNonSSLPorts
    jdpw_ports = onap_security.security_tests:OnapSecurityJdwpPorts
    kube_hunter = onap_security.security_tests:OnapSecurityKubeHunter
    versions = onap_security.security_tests:OnapSecurityVersions
